# managarr-tree-widget

./: Cargo.toml  README.md
benches/: bench.rs
examples/: example.rs
src/: flatten.rs  lib.rs  tree_item.rs  tree_state.rs
