[package]
name = "managarr-tree-widget"
description = "Tree Widget for Managarr"
version = "0.24.0"
license = "MIT"
repository = "https://github.com/Dark-Alex-17/managarr-tree-widget"
authors = ["EdJoPaTo <tui-tree-widget-rust-crate@edjopato.de>", "Dark-Alex-17 <alex.j.tusa@gmail.com>"]
edition = "2021"
keywords = ["tui", "terminal", "tree", "widget", "managarr"]
categories = ["command-line-interface"]
include = ["src/**/*", "examples/**/*", "benches/**/*", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.bench]
codegen-units = 1
debug = true
lto = true

[dependencies]
ratatui = { version = "0.29", default-features = false }
unicode-width = "0.2"

[dev-dependencies]
criterion = "0.5"
ratatui = "0.29"

[target.'cfg(target_family = "unix")'.dev-dependencies]
pprof = { version = "0.14.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "bench"
harness = false
